@@ -1,4 +1,31 @@
 <?php
+/*
+ * VersionX
+ *
+ * Copyright 2010-2011 by Mark Hamstra (contact via www.markhamstra.nl)
+ * Credit for Russian translation to elastic
+ *
+ * This file is part of VersionX, a basic versioning addon for MODx CMF.
+ *
+ * VersionX is free software; you can redistribute it and/or modify it under the
+ * terms of the GNU General Public License as published by the Free Software
+ * Foundation; either version 2 of the License, or (at your option) any later
+ * version.
+ *
+ * VersionX is distributed in the hope that it will be useful, but WITHOUT ANY
+ * WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
+ * A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License along with
+ * VersionX; if not, write to the Free Software Foundation, Inc., 59 Temple Place,
+ * Suite 330, Boston, MA 02111-1307 USA
+ *
+ * @package versionx
+ * @subpackage lexicon-fr
+ * @author elastic
+ * @date 2011-01-19
+ *
+*/
 $_lang['versionx.versionx'] = 'VersionX';
 $_lang['versionx.menuDesc'] = 'Простой компонент для управления версиями.';
 $_lang['versionx.overviewTitle'] = 'Обзор';
